syntax = "proto3";

package post.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/username/progetto/shared/proto/gen/go/post/v1;postv1";

service PostService {
  rpc CreatePost(CreatePostRequest) returns (CreatePostResponse);
  rpc GetPost(GetPostRequest) returns (GetPostResponse);
  rpc ListPosts(ListPostsRequest) returns (ListPostsResponse);
  rpc LikePost(LikePostRequest) returns (LikePostResponse);
}

message Post {
  string id = 1;
  string author_id = 2;
  string content = 3;
  repeated string media_urls = 4;
  int32 likes_count = 5;
  int32 comments_count = 6;
  google.protobuf.Timestamp created_at = 7;
}

message CreatePostRequest {
  string author_id = 1;
  string content = 2;
  repeated string media_urls = 3;
}

message CreatePostResponse {
  Post post = 1;
}

message GetPostRequest {
  string post_id = 1;
}

message GetPostResponse {
  Post post = 1;
}

message ListPostsRequest {
  string author_id = 1; // Optional: filter by author
  int32 limit = 2;
  string next_page_token = 3;
}

message ListPostsResponse {
  repeated Post posts = 1;
  string next_page_token = 2;
}

message LikePostRequest {
  string post_id = 1;
  string user_id = 2;
}

message LikePostResponse {
  bool success = 1;
  int32 new_likes_count = 2;
}
