syntax = "proto3";

package data.v1;

option go_package = "github.com/username/progetto/proto/gen/go/data/v1;datav1";

service DataService {
  rpc GetData(GetDataRequest) returns (GetDataResponse);
}

message GetDataRequest {
  string id = 1;
}

message GetDataResponse {
  string data = 1;
}
